platform_versioned_docs/version-23.4.0/functionality_matrix/functionality_matrix.mdx
---
title: "Platform / Nextflow base versions"
description: "Platform / nf-launcher / Nextflow base versions"
date: "21 Apr 2023"
tags: [compatibility, nextflow, nf-launcher]
---

Each Seqera Platform version makes use of `nf-launcher` to determine the Nextflow version used as its baseline. This Nextflow version can be overridden with the `NXF_VER` environment variable in your `nextflow.config` file, but note that Seqera may not work reliably with Nextflow versions other than the baseline version.

We officially support the two latest major releases (23.4.x, 23.3.x, etc.) at any given time.

nf-launcher versions prefixed with j17 refer to Java version 17; j11 refers to Java 11.

| Platform version | nf-launcher version | Nextflow version | Fusion version |
| ---------------- | ------------------- | ---------------- | -------------- |
| *                |                     | 24.04.2          | 2.3            |
| 23.4.4           | j17-23.10.1         | 23.10.1          | 2.2            |
| 23.4.3           | j17-23.10.1         | 23.10.1          | 2.2            |
| 23.4.2           | j17-23.10.1         | 23.10.1          | 2.2            |
| 23.4.1           | j17-23.10.1         | 23.10.1          | 2.2            |
| 23.4.0           | j17-23.04.3         | 23.04.3          | 2.1            |
| 23.3.0           | j17-23.04.3         | 23.04.3          | 2.1            |
| 23.3.0           | j17-23.04.3         | 23.04.3          | 2.1            |
| 23.2.0           | j17.23.04.2-up3     | 23.04.2          | 2.1            |
| 23.1.3           | j17-23.04.1         | 23.04.1          | 2.1            |

:::note 
Nextflow edge versions later than 24.04.2 use Fusion 2.4 by default. 
:::

(* - Nextflow version 24.04.2 will be the baseline version of an upcoming Platform release, but you can take advantage of [new Nextflow features](https://nextflow.io/blog/2024/nextflow-2404-highlights.html) in current Platform versions by specifying `NXF_VER=24.04.2` in your configuration.)

---

To use a Nextflow version other than the baseline in your pipeline run, include the environment variable `NXF_VER` in a [pre-run script](./launch/advanced#pre-and-post-run-scripts) during launch. For example, `NXF_VER=24.04.2`. 

If no Nextflow version is specified in your configuration, Seqera defaults to the baseline version outlined above.

<!-- revisit this page for latest release, add Agent interoperability for HPCs, etc. in future PR-->
